; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_is_equal.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_is_equal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BannerOutput = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @banout_is_equal(%struct.BannerOutput* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.BannerOutput*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.BannerOutput* %0, %struct.BannerOutput** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %11 = load %struct.BannerOutput*, %struct.BannerOutput** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i8* @banout_string(%struct.BannerOutput* %11, i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i8*, i8** %7, align 8
  %18 = icmp eq i8* %17, null
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %4, align 4
  br label %41

20:                                               ; preds = %3
  %21 = load i8*, i8** %7, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %41

24:                                               ; preds = %20
  %25 = load i8*, i8** %7, align 8
  %26 = call i64 @strlen(i8* %25)
  store i64 %26, i64* %9, align 8
  %27 = load %struct.BannerOutput*, %struct.BannerOutput** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i64 @banout_string_length(%struct.BannerOutput* %27, i32 %28)
  store i64 %29, i64* %10, align 8
  %30 = load i64, i64* %9, align 8
  %31 = load i64, i64* %10, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %41

34:                                               ; preds = %24
  %35 = load i8*, i8** %7, align 8
  %36 = load i8*, i8** %8, align 8
  %37 = load i64, i64* %10, align 8
  %38 = call i64 @memcmp(i8* %35, i8* %36, i64 %37)
  %39 = icmp eq i64 %38, 0
  %40 = zext i1 %39 to i32
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %34, %33, %23, %16
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i8* @banout_string(%struct.BannerOutput*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @banout_string_length(%struct.BannerOutput*, i32) #1

declare dso_local i64 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
